[package]
name = "bakery-backend"
version = "0.1.0"
edition = "2024"

default-run="bakery-backend"

[dependencies]
sea-orm = { version = "1.1.13", features = ["runtime-tokio-native-tls", "macros", "sqlx-sqlite", "chrono"] }
sea-orm-migration = "1.1.13"
tokio = { version = "1.45.1", features = ["full", "tokio-macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
